--- a/ExitTest.ipynb
+++ b/ExitTest.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "647726a3",
+   "id": "72fda3de",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "83f999ce",
+   "id": "a07b5576",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "966a3693",
+   "id": "0195a064",
    "metadata": {},
    "source": [
     "# Displaying dataset"
@@ -36,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "cb2b9f82",
+   "id": "b4a524cf",
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +260,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "e9ff3373",
+   "id": "4aba0f69",
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "2cab2f3d",
+   "id": "e2a48945",
    "metadata": {},
    "outputs": [
     {
@@ -638,7 +638,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "718d1ca6",
+   "id": "696e1c2b",
    "metadata": {},
    "outputs": [
     {
@@ -669,7 +669,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "1d1d7f41",
+   "id": "7b2a6f11",
    "metadata": {},
    "outputs": [
     {
@@ -691,7 +691,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "2ea0fbd8",
+   "id": "a1ab445e",
    "metadata": {},
    "outputs": [
     {
@@ -1012,7 +1012,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "964dca27",
+   "id": "3d5710bc",
    "metadata": {},
    "source": [
     "We can see from the summary that total count is 13994, however look into ball_controlling_skills, jumping_skills,penalties_conversion_rate,mental_strength ,shot_accuracy and years_of_experience​ etc, we can see that the numbers are less tha 13994, so we can identify that the values are missing.\n",
@@ -1021,7 +1021,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b8d61c7",
+   "id": "46e922b6",
    "metadata": {},
    "source": [
     "# finding coloums with missing values"
@@ -1030,7 +1030,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "d9256d35",
+   "id": "1505913a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1040,7 +1040,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "e6513051",
+   "id": "a11f697d",
    "metadata": {},
    "outputs": [
     {
@@ -1073,7 +1073,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "367c4e25",
+   "id": "4d6ffe9a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1084,7 +1084,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "0d47d592",
+   "id": "84bf5d5c",
    "metadata": {},
    "outputs": [
     {
@@ -1134,7 +1134,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "194ee8da",
+   "id": "26eb8043",
    "metadata": {},
    "outputs": [
     {
@@ -1156,7 +1156,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "2ae87f2f",
+   "id": "65eefd26",
    "metadata": {},
    "outputs": [
     {
@@ -1178,7 +1178,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "c01cc94b",
+   "id": "b3f6220a",
    "metadata": {},
    "outputs": [
     {
@@ -1200,7 +1200,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "69ec412f",
+   "id": "130bf4e2",
    "metadata": {},
    "outputs": [
     {
@@ -1222,7 +1222,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "1c345720",
+   "id": "071042ae",
    "metadata": {},
    "outputs": [
     {
@@ -1244,7 +1244,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "56e8caa7",
+   "id": "96b2b4ce",
    "metadata": {},
    "outputs": [
     {
@@ -1266,7 +1266,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "b4ce6723",
+   "id": "c5b7b549",
    "metadata": {},
    "outputs": [
     {
@@ -1288,7 +1288,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "ea433958",
+   "id": "61e949b1",
    "metadata": {},
    "outputs": [
     {
@@ -1310,7 +1310,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "71fbae92",
+   "id": "4dc1a6e7",
    "metadata": {},
    "outputs": [
     {
@@ -1332,7 +1332,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "7dc4ac83",
+   "id": "4d303755",
    "metadata": {},
    "outputs": [
     {
@@ -1354,7 +1354,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "3ab989c6",
+   "id": "b267bc83",
    "metadata": {},
    "outputs": [
     {
@@ -1376,7 +1376,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "b929d5c0",
+   "id": "d9c4a2f9",
    "metadata": {},
    "outputs": [
     {
@@ -1398,7 +1398,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "0a60ac36",
+   "id": "e25b6fb9",
    "metadata": {},
    "outputs": [
     {
@@ -1420,7 +1420,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "e8734117",
+   "id": "b76f422e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1431,7 +1431,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "e5526ddc",
+   "id": "b7d1d9de",
    "metadata": {},
    "outputs": [
     {
@@ -1479,7 +1479,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e596ff07",
+   "id": "83f69f79",
    "metadata": {},
    "source": [
     "# Visualization"
@@ -1487,7 +1487,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7dd1e548",
+   "id": "797b8172",
    "metadata": {},
    "source": [
     "# Univariate analysis"
@@ -1496,7 +1496,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "30189e3e",
+   "id": "24fa2610",
    "metadata": {},
    "outputs": [
     {
@@ -1523,7 +1523,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "dd71d7e7",
+   "id": "a4a9cbea",
    "metadata": {},
    "outputs": [
     {
@@ -1552,7 +1552,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "46690e1f",
+   "id": "6b29c89a",
    "metadata": {},
    "outputs": [
     {
@@ -1577,7 +1577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "66739afe",
+   "id": "8eb99b4d",
    "metadata": {},
    "source": [
     "# Two-Variable Analysis (Bivariate Analysis):"
@@ -1585,7 +1585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a2bff5fd",
+   "id": "ef61fc87",
    "metadata": {},
    "source": [
     "relationships between pairs of variables to understand correlations, patterns, and potential insights. "
@@ -1594,7 +1594,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "4cfd7c6b",
+   "id": "530599dc",
    "metadata": {},
    "outputs": [
     {
@@ -1621,7 +1621,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "a8689c3b",
+   "id": "d47bcbd9",
    "metadata": {},
    "outputs": [
     {
@@ -1648,7 +1648,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "9021f765",
+   "id": "8f061a5b",
    "metadata": {},
    "outputs": [
     {
@@ -1675,7 +1675,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "5cf3de08",
+   "id": "e214365f",
    "metadata": {},
    "outputs": [
     {
@@ -4934,4 +4934,59 @@
     }
    ],
    "source": [
-    "# Pri
+    "# Print the predictions\n",
+    "print(y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "id": "4f0cbaa1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 0, 1, ..., 1, 0, 1])"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_pred"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ffb6adfb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.9"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
